examples/passing/ImportQualified/M1.purs
module M1 where

log x = x
