examples/failing/ImportExplicit2/M1.purs
module M1 where

data X = Y
